--- a/physik_praktikum/versuch6/quellen.bib
+++ b/physik_praktikum/versuch6/quellen.bib
@@ -75,3 +75,11 @@
     year = 2022,
     urldate = {2022-03-09}
 }
+
+@online{Gummi,
+	title = {Dehnung eines Gummibandes},
+	author = {Leifi Physik},
+	url = {https://www.leifiphysik.de/mechanik/kraft-und-das-gesetz-von-hooke/aufgabe/dehnung-eines-gummibandes},
+	year = 2022,
+	urldate = {2022-03-12}
+}
