--- a/physik_praktikum/versuch5/versuch5.tex
+++ b/physik_praktikum/versuch5/versuch5.tex
@@ -1,7 +1,9 @@
 \documentclass{article}
 
 \usepackage[a4paper, top=2cm, bottom=3cm]{geometry}
-\usepackage{babel}[ngerman]
+\usepackage[ngerman]{babel}
+\usepackage{csquotes}
+
 \usepackage{booktabs}
 \usepackage{mathtools}
 \usepackage{amssymb}
@@ -36,6 +38,12 @@
     Der Fall des Luftballons wird als Bewegung eines kugelförmigen Körpers in einer Flüssigkeit (Luft oder Luft als Quasi-Flüssigkeit) mit laminarer Strömung approximiert.
 
     \section{Grundlagen}
+    Wir füllen zwei Luftballons, einmal mit Luft und einmal mit \ce{CO2}. Auf beide Luftballons wirkt die gleiche Auftriebskraft, da sie das gleiche Volumen an Luft verdrängen.
+    Aber, da sich ihre Massen unterscheiden wirkt auf den mit \ce{CO2} gefüllten Luftballon, wie wir später sehen werden, auf Grund der höheren Dichte von \ce{CO2}
+    eine stärkere Gewichtskraft, die mehr von der Geschwindigkeits abhängigen Reibungskraft überwinden kann. Der mit \ce{CO2} gefüllte Luftballon fällt schneller.
+    Aus dieser Beziehung zwischen Dichte und Geschwindigkeit stellen wir eine Formel auf und können durch Messen des Volumens der Luftballons, sowie der Fallgeschwindigkeiten
+    zunächst den Faktor zwischen den beiden Dichten, aber da wir die Dichte von Luft bereits kennen\cite{Aufgabenstellung}, die Dichte von \ce{CO2} berechnen.
+
     TODO: Co2 aus Wasser lösen, Druck Gleichgewicht etc.
 
     \section{Formeln}
@@ -43,7 +51,7 @@
     \begin{equation} \label{eq:schwerkraft}
         F_G = m \cdot g    
     \end{equation}
-    Die Masse eines Körpers können wir auch über seine Dichte und sein Volumen ausdrücken mit der Beziehung:
+    Die Masse eines Körpers (mit Dichte \(\rho_K\)) können wir auch über seine Dichte und sein Volumen ausdrücken mit der Beziehung:
     \begin{equation} \label{eq:masse_dichte_rel}
         m = \rho_K \cdot V \cdot g
     \end{equation}
@@ -59,8 +67,8 @@
     \end{equation}
     TODO: Wir setzen hier Stokes'sche Reibung an, da wir uns vollständig im Bereich laminarer Strömung aufgrund sehr kleiner Geschwindigkeiten befinden
     Der Luftballon wird als von der Schwerkraft nach unten beschleunigt, vom Auftrieb und von der Reibungskraft gebremst.
-    Der Luftballon beschleunigt bis zu seiner maximalen Fallgeschwindigkeit (TODO:LINK Wikipedia Fall mit Reibung) und fällt ab dann mit einer konstanten Geschwindigkeit weiter,
-    wird also nicht mehr weiter beschleunigt. (TODO: Methoden Skript Seite 109?), da auf den Ballon keine resultierende Kraft mehr wirkt\ref{eq:gleichgewicht}.
+    Der Luftballon beschleunigt bis zu seiner maximalen Fallgeschwindigkeit\cite{Fall-Luftwiederstand} und fällt ab dann mit einer konstanten Geschwindigkeit weiter,
+    wird also nicht mehr weiter beschleunigt, da auf den Ballon keine resultierende Kraft mehr wirkt\ref{eq:gleichgewicht}.
     Da für unsere Gegebenheiten (TODO: machen in Fehlerrechnung) die Zeit in der der Luftballon beschleunigt im Vergleich zur gesamten Fallzeit sehr gering ist,
     setzen wir für den gesamten Fall das Kräftegleichgewicht an:
     \begin{equation} \label{eq:gleichgewicht}
@@ -119,10 +127,22 @@
         \rho_{\ce{CO2}} = \rho_{Luft} + \left( \frac{t_{Luft}}{t_{\ce{CO2}}} - 1 \right) \frac{m_H}{V}
     \end{equation}
 
-
     TODO: Luftballon Kugel approximieren. Ein kugelförmiger Körper mit Dichte \(\rho_K\) in einer Flüssigkeit mit Dichte \(\rho_{Fl}\) fällt in eben jener Flüssigkeit nach unten
 
     \section{Versuchsaufbau}
+        \begin{figure}[h]
+            \centering
+            \begin{minipage}[t]{0.4\textwidth}\label{fig:versuch_schematik}
+                \includegraphics[height=6cm]{kräfte.png}
+                \caption{Schematische Darstellung des Versuchs und der auftretenden Kräfte}
+            \end{minipage}
+            \hfill
+            \begin{minipage}[t]{0.4\textwidth}\label{fig:abmessungen}
+                \includegraphics[height=6cm]{luftballons.png}
+                \caption{Messgrößen am Luftballon}
+            \end{minipage}
+        \end{figure} TODO: Allign
+
         \subsection{Material}
         \begin{itemize}
             \item 2 Luftballons
@@ -132,15 +152,12 @@
             \item 1 Stoppuhr oder Computerprogramm zum auswerten der Zeiten im Video
         \end{itemize}
 
-    TODO: SCHEMATIK EINFÜGEN PFEILLÄNGEN ÄNDERN
-    TODO: Schematik Ballonumfänge einfügen.
-
     \section{Durchführung}
         \subsection{Ballon mit \texorpdfstring{\ce{CO2}}{CO2} aufpumpen}
             \begin{enumerate}
                 \item Stülpen Sie den Luftballon (d.h.\ das Mundstück des Luftballons) auf den Hals der Mineralwasserflasche (Abb TODO: Bild hinzufügen)
                 \item Schütteln Sie die Wasserflasche wiederholt, um die im Wasser gelöste Kohlensäure in \ce{CO2}-Gas umzuwandeln und den Luftballon dadurch auf zublasen.
-                TODO: Achten Sie darauf das kein Wasser in den Ballon kommt, um die Masse des Ballons nicht zu verändern.
+                Achten Sie darauf das kein Wasser in den Ballon kommt, um die Masse des Ballons nicht zu verändern.
                 \item Der Ballon muss am Ende nicht vollständig aufgeblasen sein; etwa \(\SI{15}{cm}\) sind bereits ausreichend.
                 \item Halten sie den Ballon zu und nehmen sie ihn vorsichtig von der Flasche, sodass kein \ce{CO2} eintweicht und knoten Sie ihn zu.
             \end{enumerate}
@@ -148,7 +165,7 @@
         \subsection{Zweiten Ballon füllen}
             \begin{enumerate}[resume]
                 \item Bestimmen Sie die Umfänge des mit \ce{CO2} gefüllten Ballons mithilfe des Maßbands.
-                Messen Sie den Umfang vom Mundstück bis zum obersten Punkt (Umfang a), sowie die \glqq{}Tallie\grqq{} (Umfang b) (TODO:ref Bild)
+                Messen Sie den Umfang vom Mundstück bis zum obersten Punkt (Umfang a), sowie die \enquote{Tallie} (Umfang b) (TODO:ref Bild)
                 \item Pusten Sie einen zweiten Ballon (mit Luft) auf. Lassen sie in kleinen Schritten Luft aus dem Ballon und messen Sie wiederholt die Umfänge,
                 bis die beiden Luftballons ein identisches Volumen haben.
                 \item Knoten Sie den Luftballon zu.
@@ -163,42 +180,47 @@
                 Nehmen Sie das Video von etwas weiter weg auf und achten Sie darauf das der Start, sowie das Aufkommen auf dem Boden im Video gut zu sehen sind.
                 \item Halten Sie die beiden Luftballons in Höhe \(h\) und lassen Sie sie gleichzeitig fallen. TODO: Ref Video
                 \item Wiederholen Sie den Fallversuch 3 mal, nehmen Sie also 2 weitere Videos auf.
-            \end{enumerate}    
+            \end{enumerate}
+            
+        \subsection{Videoauswertung}
+            \begin{enumerate}
+                \item Messen Sie bei allen aufgenommen Videos die Fallzeiten der Luftballons vom Zeitpunkt an dem sie losgelassen wurden, bis sie auf den Boden aufkommen.
+                Dies kann durch mitstoppen mit einer Stoppuhr beim anschauen des Videos oder durch direktes auswerten des Videos mit Hilfe eines geigneten Computerprogramms oder Handyapp
+            \end{enumerate}
         TODO: Bilder, 1.Ballon auf Flasche, 2.Ballon auf Flasche geschüttelt, 3. Fallversuch
-        
-    TODO: Video Auswertung mit wichitg kommentar aus Skript
 
-    TODO: Wiegen sie den Luftballon.
-    TODO: Warum Fallhöhe messen? Für andere Berechnung für \(t_{Venus}\)?
-
-    TODO: (Wasser in Ballon?)
-    
-    Fallen gelassen von Unterkante des Türrahmens
-    
+        Bei unserer Durchführung haben wir uns für die Unterkannte eines Türrahmens entschieden. TODO:
     
     \section{Auswertung}
-        Umfänge mitteln zu von \(a_1 = \SI{0.475}{m} und a_2 = \SI{0.477}{m} \)
-        \(a = \SI{0.476}{m} \) und \(b = \SI{0.45}{m} \)
-        Umfänge mitteln \( \frac{ \SI{0.476}{m} + \SI{0.45}{m} }{2} = \SI{0.463}{m} \)
-
-        Volumen ausrechnen:
+        Es wurde versucht die beiden Luftballons bestmöglich auf das gleiche Volumen zu bringen.
+        Wir berechnen aus den Messungen der Umfänge ein Volumen, was wir für beide Luftballons ansetzen.
+        Für a:
+        \begin{equation}
+            a_1 = \SI{0.475}{m}, a_2 = \SI{0.477}{m} \Rightarrow a = \SI{0.476}{m} 
+        \end{equation}
+        Für b wurde bei beiden Luftballons der selbe Umfang \(b = \SI{0.45}{m} \) gemessen.
+        Wir berchnen den Mittelwert aus \(a\) und \(b\), um den Luftballon besser als Kugel approximieren zu können.
+        \begin{equation}
+            U = \frac{ \SI{0.476}{m} + \SI{0.45}{m} }{2} = \SI{0.463}{m}
+        \end{equation}
+        Volumen der Luftballons berechnen:
         \begin{equation} \label{eq:volumen}
             V = \frac{4}{3} \pi {\left( \frac{U}{2 \pi} \right) }^3 = \frac{4}{3} \pi \frac{U^3}{8 \pi^3} = \frac{1}{6} \frac{U^3}{\pi^2}
-        \end{equation} % kopiert aus 6
-        Eingesetzt und ausgerechnet:
-        \( \SI{1.676e-3}{m^3} \)
+        \end{equation}
+        Wir setzen den Umfang \(U\) ein:
+        \begin{equation}
+            V =  \frac{1}{6} \frac{{(\SI{0.463}{m})}^3}{\pi^2} = \SI{1.676e-3}{m^3}
+        \end{equation}
+        
+        Berechnen Sie aus den drei Messungen die Mittelwerte und setzen sie ein.
 
-        Dann Zeiten einsetzen:
-
-        rho luft aus 5.4
+        Mit der Dichte \(\rho_{Luft}\) aus der Aufgabenstellug\cite{Aufgabenstellung}
+        und dem Mittelwert der aus den Videos bestimmten Fallzeiten berechnen wir mit Formel\ref{eq:calc_rho_co2} die Dichte von \ce{CO2}:
         \begin{equation}
             \rho_{CO_2} = \SI{1.2041}{\frac{kg}{m^3}} + (\frac{t_{Luft}}{t_{CO_2}} - 1)+\frac{m_H}{V}
         \end{equation}
-        Berechnen Sie aus den drei Messungen die Mittelwerte und setzen sie ein.
-
-        Formel mit Volumenformel eingesetzt
-        Ergebnis
-    TODO: Trennen Formeln und Auswertung
+        TODO: Formel für die Dichte von co2 mit Volumenformel eingesetzt?
+        TODO: Trennen Formeln und Auswertung?
 
     \section{Fehlerrechnung}
         Prallaxe von Video???
@@ -208,19 +230,13 @@
         TODO: Fehler Luftballon aufgepustet nicht Umgebungsluft?
         TODO: Fehler Luft im Co2 ballon, alternativ Sodastream?
         TODO: Schwer zu sehen wann Boden berührt
+        TODO: Wiegen sie den Luftballon.
         TODO: Fehler Luftballon wiegt 2g
-        TODO: Video aufgenommen ausgewertet mit Media Player Classic ausgewertet
+        TODO: (Wasser in Ballon?)
+        TODO: Video aufgenommen ausgewertet mit Media Player Classic?App ausgewertet
         TODO: Beachten Vidoe nur mit 30fps aufgenommen Fehlerrechnung
         TODO: Umfangfehlerrechnung aus Versuch 6 klauen. Hier aber mehr auf schwierig Umfänge zu vergleichen eingehen. Volumenfehler
         TODO: Theoriefehler aus Herleitung???
-
-    \section{Ergebnis}
-        TODO: Plot, ort, zeit geschwindigkeit des Luftballons beim Fall? mit pgfplots
-
-        TODO: Prozent abweichung vom Literaturwert
-
-        TODO: Wie viel Co2 in Waserflasche gelöst.
-        TODO:Literaturwert Quelle angeben
 
     \section{Fall auf der Venus}
         Wir bestimmen nun, wie lang der Fall des mit \ce{CO2} gefüllten Luftballons auf der Venus dauern würde. Wir nehmen an,
@@ -288,15 +304,27 @@
             \frac{ \SI{14.73e-6}{\pascal \cdot \second} }{ \SI{18.21e-6}{\pascal \cdot \second} } \cdot \frac{ \SI{8.87}{\frac{m}{s^2}} }{ \SI{9.81}{\frac{m}{s^2}} } \cdot
             \left( 1 + \frac{TODO:Volumen\SI{1}{m^3}}{ \SI{0.005}{\kilogram} } \cdot \left( TODO: Dichte co2\SI{1}{\frac{kg}{m^3}} - \SI{1.2041}{\frac{kg}{m^3}} \right) \right)
         \end{equation}
-        TODO: \(t_v = 1,274s\)
+        TODO: \(t_v = 1.274s\)
         TODO: Das Verhältnis ist, die Fallzeit auf der Venus ist länger/kürzer
         TODO: Aufgabe vergleichen Sie Fallzeiten! Warum länger/kürzer, Abhängigkeit Dichte, Viskosität, Gewichtskraft.
 
+    TODO: Aufgabenstellung nochmal genau lesen.
+    TODO: Messergebnisse nochmal neu aufschreiben und anheften.
+
+    \section{Ergebnis}
+        TODO: Plot, ort, zeit geschwindigkeit des Luftballons beim Fall? mit pgfplots
+
+        TODO: Prozent abweichung vom Literaturwert
+
+        TODO: Wie viel Co2 in Waserflasche gelöst.
+        TODO:Literaturwert Quelle angeben
+
+    \section{Diskusion}
+        TODO:
 
     \printbibliography[title={Quellen}]
 
-    TODO: Bilder
-    TODO: Aufgabenstellung nochmal genau lesen.
-    TODO: Messergebnisse nochmal neu aufschreiben und anheften.
+    TODO: FOTOS und Messwerte
+    TODO: Warum Fallhöhe messen? Für andere Berechnung für \(t_{Venus}\)?
 
 \end{document}
