--- a/physik_praktikum/versuch6/versuch6.tex
+++ b/physik_praktikum/versuch6/versuch6.tex
@@ -371,7 +371,7 @@
             \frac{t_a^{Versuch}}{t_a^{Weltall}} = \frac{ \SI{1.32}{\second} }{ \SI{0.0727}{\second} } = 18.1568
         \end{equation}
         Die Ausströmzeit auf der Erde ist \(\approx 18\) mal länger als im Weltall. \\
-        TODO: Es ist logisch, dass der Ballon im Weltall länger braucht, da???
+        TODO: Es ist logisch, dass der Ballon im Weltall länger braucht, da??? Dichte von Luft im Weltall nicht gleich.
 
         Fehlerbehaftet sind bei diser Rechnung das Volumen des Luftballons, sowie die der durch das Experiment bestimmte Innendruck des Luftballons.
         Wobei der Fehler des Drucks hier keine Rolle spielt, da der Atmosphärendruck auf der Erde drei Größenordnungen größer ist und als genau angenommen wird.
