--- a/physik_praktikum/versuch2/versuch2.tex
+++ b/physik_praktikum/versuch2/versuch2.tex
@@ -44,6 +44,33 @@
       In diesem Experiment soll das Trägheitsmoment eines Kreisels über drei verschiedene Methoden bestimmt werden.
       
 
+      Was ist ein Trägheitsmoment? aus Lehrbuch
+
+      Durchführung mit Bild woher Variblen an Bild
+      Ergebnisse(Messergebnisse), da nochmal ordentlich
+      Auswertung
+      Formeln aus der Anleitung nicht nochmal herleiten
+
+
+      1. Teilversuch Graphische Auswertung daraus S
+      Fehler auch Graphische
+      \( \Delta I = \left|\right| \) <- maximaler Fehler
+      Bei wenigen Messungen eher maximaler Fehler da schlechte Statistik für Standardabweichung nicht gut.
+
+
+      z.B. I = 0.0728359
+      \( \Delta I = 0.00017 \) <- nur zwei signifikante stellen
+      I = 0,7284 +- 0.0017
+
+      Länge ca.5 Seiten.
+
+    Vergleich der Ergebnisse
+    Hoffentlich ähnliche Ergebnisse.
+    Diskutiere z.B Reibungseffekte, Kleinwinkelnäherung, etc.
+    Fazit beste Methode, z.B. kleinester Fehler, Durchführung am wenigsten Aufpassen.
+
+    Anhang Messwerte
+
     \section{Grundlagen}
 
     \section{Durchführung}
